bad/add_invalid_types_null_void.example_compiler_output
ERROR
[1mbad/add_invalid_types_null_void.lat:5:7: [1;31merror: [0;1maddition is defined only for int values or string values, not `null` and `void`[m
	null + foo();
	     [1;32m^[m
